--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/cs.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/cs.json
@@ -1,6 +1,12 @@
 ﻿{
   "culture": "cs",
   "texts": {
-    "ManageYourProfile": "Spravovat profil"
+    "EndPoint": "TencentCloud API EndPoint",
+    "DefaultSecretId": "SecretId default value",
+    "DefaultSecretKey": "SecretKey default value",
+    "DefaultSmsSdkAppid": "SdkAppid default value",
+    "DefaultSign": "Sign default value",
+    "DefaultExtendCode": "ExtendCode default value",
+    "DefaultSenderId": "SenderId default value"
   }
 }
