--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/en.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/en.json
@@ -1,7 +1,12 @@
 ﻿{
   "culture": "en",
   "texts": {
-    "ManageYourProfile":  "Manage your profile",
-    "SamplePageMessage": "A sample page for the TencentCloud module"
+    "EndPoint": "TencentCloud API EndPoint",
+    "DefaultSecretId": "SecretId default value",
+    "DefaultSecretKey": "SecretKey default value",
+    "DefaultSmsSdkAppid": "SdkAppid default value",
+    "DefaultSign": "Sign default value",
+    "DefaultExtendCode": "ExtendCode default value",
+    "DefaultSenderId": "SenderId default value"
   }
 }
