--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/tr.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/tr.json
@@ -1,7 +1,12 @@
 ﻿{
   "culture": "tr",
   "texts": {
-    "ManageYourProfile":  "Profil yönetimi",
-    "SamplePageMessage": "TencentCloud modulünden örnek bir sayfa"
+    "EndPoint": "TencentCloud API EndPoint",
+    "DefaultSecretId": "SecretId default value",
+    "DefaultSecretKey": "SecretKey default value",
+    "DefaultSmsSdkAppid": "SdkAppid default value",
+    "DefaultSign": "Sign default value",
+    "DefaultExtendCode": "ExtendCode default value",
+    "DefaultSenderId": "SenderId default value"
   }
 }
