--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/zh-Hans.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/zh-Hans.json
@@ -1,6 +1,12 @@
 ﻿{
   "culture": "zh-Hans",
   "texts": {
-    "ManageYourProfile":  "管理个人资料" 
+    "EndPoint": "腾讯云 API 端点地址",
+    "DefaultSecretId": "SecretId 默认值",
+    "DefaultSecretKey": "SecretKey 默认值",
+    "DefaultSmsSdkAppid": "SdkAppid 默认值",
+    "DefaultSign": "Sign 默认值",
+    "DefaultExtendCode": "ExtendCode 默认值",
+    "DefaultSenderId": "SenderId 默认值"
   }
 }
