--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/en.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/en.json
@@ -4,7 +4,8 @@
     "EndPoint": "TencentCloud API EndPoint",
     "DefaultSecretId": "SecretId default value",
     "DefaultSecretKey": "SecretKey default value",
-    "DefaultSmsSdkAppid": "SdkAppid default value",
+    "DefaultRegion": "Region default value",
+    "DefaultSmsSdkAppid": "SmsSdkAppid default value",
     "DefaultSign": "Sign default value",
     "DefaultExtendCode": "ExtendCode default value",
     "DefaultSenderId": "SenderId default value"
