--- a/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/zh-Hant.json
+++ b/src/EasyAbp.Abp.Sms.TencentCloud/EasyAbp/Abp/Sms/TencentCloud/Localization/zh-Hant.json
@@ -4,7 +4,8 @@
     "EndPoint": "騰訊雲 API 端點地址",
     "DefaultSecretId": "SecretId 默認值",
     "DefaultSecretKey": "SecretKey 默認值",
-    "DefaultSmsSdkAppid": "SdkAppid 默認值",
+    "DefaultRegion": "Region 默認值",
+    "DefaultSmsSdkAppid": "SmsSdkAppid 默認值",
     "DefaultSign": "Sign 默認值",
     "DefaultExtendCode": "ExtendCode 默認值",
     "DefaultSenderId": "SenderId 默認值"
